--- a/src/view/home_screen.kv
+++ b/src/view/home_screen.kv
@@ -3,7 +3,8 @@
 #:import dp kivy.metrics.dp
 
 <Overlay@Widget>:
-
+#TODO delete this kludge overlay
+#TODO DELETE THIS KLUDGE OVERLAY
     darken: 0.0
     desaturation: 0.0
 
@@ -80,18 +81,18 @@
                         do_scroll_x: False
                         do_scroll_y: True
                         scroll_type: ['bars', 'content']   
-                        id: scroll_prompt_history_player_1                  
+                        id: scroll_prompt_store_viewer_1                  
                         
                         TextInput:
                             padding: 20, 20
-                            id: prompt_history_player_1
+                            id: prompt_store_viewer_1
                             text:""     
                             markup: True                                                                              
                             multiline: True
                             readonly: True                        
                             height: self.minimum_height
                             size_hint_y: None
-                            height: max(self.minimum_height, scroll_prompt_history_player_1.height)
+                            height: max(self.minimum_height, scroll_prompt_store_viewer_1.height)
                             size_hint_x: 1
                             scroll_y: 1
                             cursor_blink: True                        
@@ -121,21 +122,22 @@
                             background_down: ""  
                             text: "[b]<[/b]"
                             markup: True                        
-                            on_press: root.rewind_prompt_history(1)
+                            on_press: root.rewind_prompt_store(1)
+
                         Button:
                             background_color: 0.752, 0.762, 0.834, 1
                             background_normal: ""
                             background_down: ""   
                             text: "[b]v[/b]"
                             markup: True
-                            on_press: root.copy_prompt_history_selected_text(1)
+                            on_press: root.retrieve_prompt_history_selected_text(1)
                         Button:
                             background_color: 0.682, 0.722, 0.804, 1
                             background_normal: ""
                             background_down: ""  
                             text: "[b]>[/b]"
                             markup: True
-                            on_press: root.forward_prompt_history(1)
+                            on_press: root.forward_prompt_store(1)
 
                     ScrollView: # Prompt Text Input 1
                         size_hint: (1, .5)
@@ -143,18 +145,18 @@
                         do_scroll_x: False
                         do_scroll_y: True                    
                         scroll_type: ['bars', 'content'] 
-                        id: scroll_prompt_player_1
+                        id: scroll_prompt_input_1
 
                         TextInput:
                             padding: 20, 20
-                            id: prompt_player_1                                            
+                            id: prompt_input_1                                            
                             hint_text: ""
                             markup: True                                                      
                             multiline: True
                             readonly: False
                             size_hint_y: None
                             scroll_y: 1                            
-                            height: max(self.minimum_height, scroll_prompt_player_1.height)                            
+                            height: max(self.minimum_height, scroll_prompt_input_1.height)                            
                             cursor_blink: True                                      
                             background_color: .79, .87, .99, 1 # input 1
                             foreground_color: 0, 0, 0, 1 
@@ -182,7 +184,7 @@
                             background_down: ""  
                             text: "Submit"
                             bold: 1
-                            on_press: root.submit_prompt_to_history_gui(1)
+                            on_press: root.submit_prompt_being_edited(1)
 
                         Button:
                             background_color: .4, .5, .6, 1
@@ -225,18 +227,18 @@
                         do_scroll_x: False
                         do_scroll_y: True
                         scroll_type: ['bars', 'content'] 
-                        id: scroll_prompt_history_player_2
+                        id: scroll_prompt_store_viewer_2
 
                         TextInput:
                             padding: 20, 20
-                            id: prompt_history_player_2                        
+                            id: prompt_store_viewer_2                        
                             text:""                             
                             markup: True                                                      
                             multiline: True
                             readonly: True                        
                             height: self.minimum_height
                             size_hint_y: None
-                            height: max(self.minimum_height, scroll_prompt_history_player_2.height)
+                            height: max(self.minimum_height, scroll_prompt_store_viewer_2.height)
                             scroll_y: 1
                             cursor_blink: True                        
                             background_color: 0.99, 0.87, 1, 1 # History 2                        
@@ -264,21 +266,21 @@
                             background_down: ""  
                             text: "[b]<[/b]"
                             markup: True                        
-                            on_press: root.rewind_prompt_history(2)
+                            on_press: root.rewind_prompt_store(2)
                         Button:
                             background_color: 0.834, 0.762, 0.752, 1
                             background_normal: ""
                             background_down: ""   
                             text: "[b]v[/b]"
                             markup: True
-                            on_press: root.copy_prompt_history_selected_text(2)
+                            on_press: root.retrieve_prompt_history_selected_text(2)
                         Button:
                             background_color: 0.804, 0.722, 0.682, 1
                             background_normal: ""
                             background_down: ""  
                             text: "[b]>[/b]"
                             markup: True
-                            on_press: root.forward_prompt_history(2)
+                            on_press: root.forward_prompt_store(2)
 
                     ScrollView: # Prompt Text Input 2
                         size_hint: (1, .5)
@@ -286,18 +288,18 @@
                         do_scroll_x: False
                         do_scroll_y: True
                         scroll_type: ['bars', 'content'] 
-                        id: scroll_prompt_player_2
+                        id: scroll_prompt_input_2
 
                         TextInput:
                             padding: 20, 20
-                            id: prompt_player_2                                                
+                            id: prompt_input_2                                                
                             hint_text: ""
                             markup: True                                                      
                             multiline: True
                             readonly: False
                             size_hint_y: None
                             scroll_y: 1  
-                            height: max(self.minimum_height, scroll_prompt_player_2.height)                    
+                            height: max(self.minimum_height, scroll_prompt_input_2.height)                    
                             cursor_blink: True                          
                             background_color: 0.98, 0.86, .99, 1 # input 2  
                             foreground_color: 0, 0, 0, 1     
@@ -324,7 +326,7 @@
                             background_down: ""  
                             text: "Submit"
                             bold: 1
-                            on_press: root.submit_prompt_to_history_gui(2)
+                            on_press: root.submit_prompt_being_edited(2)
 
                         Button:
                             background_color: .4, .5, .6, 1
